--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "^12.2.4",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2"
   },
@@ -18,9 +19,12 @@
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "7.32.0",
     "eslint-config-custom": "workspace:*",
     "next-transpile-modules": "^9.0.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "tsconfig": "workspace:*",
     "typescript": "^4.7.4"
   }
