fix(csv-to-pdf-microservice): csv read error on some files

--- a/backend/services/csv-to-pdf-microservice/package.json
+++ b/backend/services/csv-to-pdf-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csv-to-pdf-microservices-app",
+  "name": "csv-to-pdf-microservice",
   "private": true,
   "scripts": {
     "postinstall": "poetry install",
